refactor(Menu): create Historique classe pour déléguer